fix spacing issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -101,7 +101,7 @@ main {
 
 .reset-option-info {
   color: var(--dark-grey-2);
-  margin-bottom: 40px;
+  margin-bottom: 48px;
 }
 
 .option-container .option-container__list {
